# puppet-congress

./: .gitreview  .zuul.yaml  CONTRIBUTING.rst  Gemfile  README.md  README.rst  metadata.json  setup.cfg
examples/: init.pp
lib/puppet/provider/congress_api_paste_ini/: ini_setting.rb
lib/puppet/provider/congress_config/: ini_setting.rb
lib/puppet/type/: congress_api_paste_ini.rb  congress_config.rb
manifests/: client.pp  config.pp  db.pp  deps.pp  init.pp  logging.pp  params.pp  policy.pp  server.pp  service.pp
manifests/db/: mysql.pp  postgresql.pp  sync.pp
manifests/keystone/: auth.pp  authtoken.pp
releasenotes/notes/: add_messaging_notification_parameters-71a194ef982371d6.yaml  deprecate_rpc_backend_parameter-a671397f2235d98e.yaml  disabled_drivers-c15358e53443e819.yaml  dont-include-logging-init-a2ebac9e1ad21682.yaml  remove-ceilometer-driver-c68eee76e6814632.yaml  remove-deprecated-params-bf2f9e3894c14d76.yaml
releasenotes/source/: conf.py  index.rst
spec/acceptance/: basic_congress_spec.rb
spec/classes/: congress_client_spec.rb  congress_config_spec.rb  congress_db_mysql_spec.rb  congress_db_postgresql_spec.rb  congress_db_spec.rb  congress_db_sync_spec.rb  congress_init_spec.rb  congress_keystone_auth_spec.rb  congress_keystone_authtoken_spec.rb  congress_logging_spec.rb  congress_policy_spec.rb  congress_server_spec.rb
spec/unit/provider/congress_api_paste_ini/: ini_setting_spec.rb
spec/unit/provider/congress_config/: ini_setting_spec.rb
spec/unit/type/: congress_api_paste_ini_spec.rb  congress_config_spec.rb
tests/: init.pp
