[metadata]
name = puppet-congress
summary = Puppet module for OpenStack Congress
description-file =
    README.md
author = Puppet Labs and OpenStack Contributors
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/puppet-openstack-guide
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
